--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -7,17 +7,20 @@ from snakemake.utils import validate
 from snakemake.utils import min_version
 
 ########## check minimum snakemake version ##########
-min_version("8.5.0")
+min_version("8.10.0")
 
 ########## load config and sample sheets ##########
 
-configfile: os.path.join(workflow.basedir, "../", "config", "config.yaml")
-sampleFile = os.path.join(workflow.basedir, "../", "config", config["main"]["sampleFile"])
+configfile: os.path.join(workflow.basedir, "../", "config", "config_dev.yaml")
+runFile = os.path.join(workflow.basedir, "../", "config", config["main"]["runFile"])
 
+LOGPATH =  os.path.normpath(config["main"]["logPath"])
+INTERIMPATH = os.path.normpath(config["main"]["interimPath"])
+RESULTPATH = os.path.normpath(config["main"]["resultPath"])
 
 include: os.path.join(workflow.basedir, "rules", "preflight.smk")
 include: os.path.join(workflow.basedir, "rules", "basecall.smk")
-include: os.path.join(workflow.basedir, "rules", "qc.smk")
 
 rule all:
     input:
+        expand(os.path.join(INTERIMPATH, "basecalling", "{run}", "collectAll.flag"), run=RUNS),
