--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,11 +1,11 @@
-'''
+"""
 
 Copyright Richard Stöckl 2024.
 Distributed under the Boost Software License, Version 1.0.
 (See accompanying file LICENSE or copy at 
 https://www.boost.org/LICENSE_1_0.txt)
 
-'''
+"""
 
 import pandas as pd
 import re
@@ -20,16 +20,24 @@ min_version("8.10.0")
 
 ########## load config and sample sheets ##########
 
+
 configfile: os.path.join(workflow.basedir, "../", "config", "config_dev.yaml")
+
+
 runFile = os.path.join(workflow.basedir, "../", "config", config["main"]["runFile"])
 
-LOGPATH =  os.path.normpath(config["main"]["logPath"])
+LOGPATH = os.path.normpath(config["main"]["logPath"])
 INTERIMPATH = os.path.normpath(config["main"]["interimPath"])
 RESULTPATH = os.path.normpath(config["main"]["resultPath"])
+
 
 include: os.path.join(workflow.basedir, "rules", "preflight.smk")
 include: os.path.join(workflow.basedir, "rules", "basecall.smk")
 
+
 rule all:
     input:
-        expand(os.path.join(INTERIMPATH, "basecalling", "{run}", "collectAll.flag"), run=RUNS),
+        expand(
+            os.path.join(INTERIMPATH, "basecalling", "{run}", "collectAll.flag"),
+            run=RUNS,
+        ),
