feat: add unit tests and test data

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -21,7 +21,7 @@ min_version("8.10.0")
 ########## load config and sample sheets ##########
 
 
-configfile: os.path.join(workflow.basedir, "../", "config", "config_dev.yaml")
+configfile: os.path.join(workflow.basedir, "../", "config", "config.yaml")
 
 
 runFile = os.path.join(workflow.basedir, "../", "config", config["main"]["runFile"])
